# sigbci

./: LICENSE  README.md  prueba.py  pyproject.toml
setup/: fsj.py
sigbci/setup/: fsj.py  pdr.py  util.py
